deployments/infrastructure/observability/loki/loki-basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: loki-basic-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: loki-basic-auth
