deployments/infrastructure/observability/loki/loki-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-push
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "loki.talos-cluster.local.obleey.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /loki/api/v1/push
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: loki-basic-auth
      backendRefs:
        - name: loki-gateway
          port: 80
